feat: add course-related components and their tests
- Created CourseDetails component with its template and styles.
- Created CourseList component with its template and styles.
- Created CourseProgress component with its template and styles.
- Created CourseVideoPlayer component with its template and styles.
- Created CoursesPreview component with its template and styles.
- Created Home component with its template and styles.
- Created Mentors component with its template and styles.
- Created Partners component with its template and styles.
- Created Statistics component with its template and styles.
- Created Testimonials component with its template and styles.
- Created Notfound component with its template and styles.
- Created shared components: Button, FilterSidebar, Footer, Modal, Navbar, SearchBar, and Spinner, each with their templates and styles.
- Created Student components: Certificates, Dashboard, and ProgressTracker, each with their templates and styles.
- Added unit tests for all components to ensure they are created successfully.

--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,7 @@
               "buildTarget": "Novira:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "production"
         },
         "extract-i18n": {
           "builder": "@angular/build:extract-i18n"
@@ -88,5 +88,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
